# icd

./: .Rbuildignore  .Rinstignore  .covrignore  .gitattributes  .gitconfig  .gitignore  .lintr  .travis.yml  404.html  CONTRIBUTING.html  CONTRIBUTING.md  DESCRIPTION  ICD.Rmd  NAMESPACE  NEWS  NEWS.md  README  README.Rmd  README.md  _pkgdown.yml  appveyor.yml  authors.html  cleanup  codecov.yml  codemeta.json  configure  configure.ac  configure.win  cran-comments.md  docsearch.json  icd.Rproj  icd9.Rproj  index.html  pkgdown.yml  sitemap.xml  wercker.yml
.aspell/: defaults.R  icdwords.rds  words.pws
R/: .gitignore  Icd9Util.R  R_user_dir.R  RcppExports.R  RcppExportsMjrMnr.R  RcppExportsShim.R  as_char_no_warn.R  askYesNo.R  assign.R  attr.R  benchmark.R  bindings.R  catch-routine-registration.R  categorize.R  chapter-ranges.R  children.R  children_alt.R  cim-10-fr.R  class.R  comorbid.R  comorbid_alt.R  comorbid_pccc.R  condense.R  convert.R  datadocs.R  deprecated.R  devel.R  diff_comorbid.R  env.R  explain-table.R  explain.R  explaintable.R  factor_nosort.R  fetch_icd10cm.R  filter.R  fuzz.R  generate-mappings-icd10.R  generate.R  generate_deprecated_data.R  generate_mappings.R  (+61 more)
articles/: CMS-HCC.html  Calculating_comorbidities_from_medical_codes.html  Charlson_and_other_scores.html  Comparing_Comorbidity_Mappings_Vignette.html  ICD-10.html  PCCC.html  Ranges.html  Using_Hierarchical_Condition_Codes.html  charlson-scores.html  compare-maps.html  country-lang-vers-prebuilt.html  country-lang-vers.html  custom-maps.html  icd-10.html  index.html  introduction.html  pccc.html  ranges.html  who.html
benchmarks/: bench-addleadingzeroes.R  bench-appendMinor.R  bench-charlson.R  bench-children.R  bench-class.R  bench-comorbid-icd9-1e7-plain.R  bench-comorbid.R  bench-dropLeadingZeroes.R  bench-expand.R  bench-factor-nosort.R  bench-fill-integer-seq-duff.cpp  bench-gen-hier.R  bench-icd10.R  bench-int-to-str.R  bench-parse-rtf-lookup-fourth.R  bench-parse-rtf.R  bench-pccc.R  bench-rbind-with-empty.R  bench-refactor.Rmd  bench-rtf.R  bench-sort.R  bench-strings.R  bench-versus-compare.R  bench-versus-plus.R  bench-versus.R  benchmark.R  lookup-fourth.rda  rtf-fourth-out.rda
data/: .gitignore  ahrqComorbid.RData  ahrqComorbidAll.RData  chapters.R  deprecated.RData  elixComorbid.RData  elixhauserComorbid.RData  icd10_map_ahrq.RData  icd10_map_ahrq.rda  icd10_map_ahrq_pc.RData  icd10_map_ahrq_pcs.RData  icd10_map_ahrq_pcs.rda  icd10_map_cc.RData  icd10_map_cc.rda  icd10_map_ccs.RData  icd10_map_ccs.rda  icd10_map_charlson.RData  icd10_map_charlson.rda  icd10_map_elix.RData  icd10_map_elix.rda  icd10_map_pccc_dx.RData  icd10_map_pccc_dx.rda  icd10_map_pccc_fixed_dx.RData  icd10_map_pccc_orig_dx.RData  icd10_map_pccc_orig_fixed_dx.RData  icd10_map_pccc_orig_pc.RData  icd10_map_pccc_pc.RData  icd10_map_pccc_pcs.RData  icd10_map_pccc_pcs.rda  icd10_map_quan_charlson.RData  icd10_map_quan_deyo.RData  icd10_map_quan_deyo.rda  icd10_map_quan_elix.RData  icd10_map_quan_elix.rda  icd10_names_ccs.RData  icd10_names_ccs.rda  icd10_pcs.RData  icd10_sources.RData  icd10_sub_chapters.RData  icd10_sub_chapters.rda  (+75 more)
data-raw/: .gitignore  CMS28_DESC_LONG_DX.txt  I9diagnosesV25.txt  I9diagnosis.txt  ICD10_Charlson.sas  ICD10_Elixhauser.sas  Pathology_Office2007.laccdb  V27LONG_SHORT_DX_110909.csv  ccs_multi_dx_tool_2013.csv  icd-gem-2016-convert-10pc-to-9pc.txt  icd-gem-2016-convert-9pc-to-10pc.txt  icd-gem-2018-convert-10-to-9.txt  icd-gem-2018-convert-9-to-10.txt  uranium_pathology.R  vermont_dx.R
deprecated-tests/: test-all.R
docs/: CONTRIBUTING.html  authors.html  index.html  pkgdown.yml
inst/: COPYRIGHTS  WORDLIST  _pkgdown.yml
man/: ahrqComorbid.Rd  ahrqComorbidAll.Rd  all_identical.Rd  appendZeroToNine.Rd  apply_hier.Rd  as.comorbidity_map.Rd  as.decimal_diag.Rd  as.icd_short_diag.Rd  as_char_no_warn.Rd  as_short_diag.Rd  attr_decimal_diag.Rd  attr_short_diag.Rd  c.icd9.Rd  categorize.Rd  categorize_simple.Rd  chapter_to_desc_range.Rd  chapters_to_map.Rd  charlson.Rd  charlson_from_comorbid.Rd  children.Rd  children_defined.Rd  classes_ordered.Rd  combine.Rd  comorbid.Rd  comorbidMatMul.Rd  comorbidMatMulMore.Rd  comorbidMatMulSimple.Rd  comorbidMatMulWide.Rd  comorbid_common.Rd  comorbid_df_to_mat.Rd  comorbid_hcc.Rd  comorbid_hcc_worker.Rd  comorbid_mat_to_df.Rd  comorbid_pccc_dx.Rd  condense.Rd  condense_explain_table.Rd  condense_explain_table_to_majors.Rd  condense_explain_table_to_majors_worker.Rd  condense_explain_table_worker.Rd  convert.Rd  (+543 more)
man-roxygen/: abbrevHier.R  abbrev_names.R  addZeroV.R  billable.R  ccs-single.R  defined.R  deprecated-icd3.R  dotdotdot.R  dropZeroV.R  dx.R  hierarchy.R  icd9-any.R  icd9-decimal.R  icd9-short.R  icd9df.R  icd9field.R  icd_df.R  icd_name.R  invalid.R  invert.R  isShort.R  lang.R  leadingZeroes.R  major.R  mapping-icd9.R  mapping.R  minor.R  mnr.R  offline.R  onlyBillable.R  onlyReal.R  parse-template.R  parse.R  pc.R  poa.R  poaField.R  poa_name.R  return.df.R  return_binary.R  return_df.R  (+21 more)
news/: index.html
reference/: all_identical.html  apply_hier.html  as.comorbidity_map.html  as.decimal_diag.html  as_char_no_warn.html  attr_decimal_diag.html  attr_short_diag.html  c.icd9.html  categorize.html  categorize_simple.html  chapter_to_desc_range.html  chapters_to_map.html  charlson.html  charlson_from_comorbid.html  children.html  children_defined.html  classes_ordered.html  combine.html  comorbid.html  comorbidMatMul.html  comorbidMatMulSimple.html  comorbidMatMulWide.html  comorbid_common.html  comorbid_df_to_mat.html  comorbid_hcc.html  comorbid_hcc_worker.html  comorbid_mat_to_df.html  comorbid_pccc_dx.html  condense.html  condense_explain_table.html  condense_explain_table_worker.html  convert.html  count_codes.html  count_codes_wide.html  count_comorbid.html  cr.html  decimal_to_parts.html  decimal_to_short.html  diff_comorbid.html  do_extra_tests.html  (+224 more)
src/: .clang-format  .clang-tidy  .gitignore  Makevars  Makevars.in  Makevars.win  Makevars.win64  RcppExports.cpp  appendMinor.cpp  appendMinor.h  appendMinor.hpp  attr.cpp  (+109 more)
(+758 files in other folders)
